bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
  ind = char getIndication()
        ^