bdr.BDR.scala.code
var ind = 'D'
while (ind!=' ') {
  ind = char getIndication()
  if (ind=='R') {
    right()
    forward()
  } else if (ind=='L') {
    left()
    forward()
  } else if (ind=='I') {
    left()
    left()
    forward()
  } else if (ind=='A') {
    forward()
  } else if (ind=='B') {
    forward()
    forward()
  } else if (ind=='C') {
    forward()
    forward()
    forward()
  } else if (ind=='Z') {
    backward()
  } else if (ind=='Y') {
    backward()
    backward()
  } else if (ind=='X') {
    backward()
    backward()
    backward()
  }
}